--- a/class/students.html
+++ b/class/students.html
@@ -37,6 +37,19 @@
     <a href="sms:8645694879"><div class="contactButton2">d</div></a>
     <a href="mailto:jonathan@ksgrade2.com"><div class="contactButton2">v</div></a>
   </div>
+  <table class="missionsKeyTable">
+    <tr>
+      <td class="complete"></td>
+      <td class="equalSign">=</td>
+      <td class="keyLabel">complete</td>
+      <td class="incomplete"></td>
+      <td class="equalSign">=</td>
+      <td class="keyLabel">incomplete</td>
+      <td class="missing"></td>
+      <td class="equalSign">=</td>
+      <td class="keyLabel">missing</td>
+    </tr>
+  </table>
   <p id="asHeading"></p>
   <div id="listAS"></div>
   <p id="mvHeading"></p>
@@ -344,6 +357,19 @@
 
 <div id="missionsPop" class="pop">
     <div id="missionsTitleDiv">MISSIONS</div>
+    <table class="missionsKeyTable">
+      <tr>
+        <td class="complete"></td>
+        <td class="equalSign">=</td>
+        <td class="keyLabel">complete</td>
+        <td class="incomplete"></td>
+        <td class="equalSign">=</td>
+        <td class="keyLabel">incomplete</td>
+        <td class="missing"></td>
+        <td class="equalSign">=</td>
+        <td class="keyLabel">missing</td>
+      </tr>
+    </table>
     <div class="checkboxes"><label><input type="checkbox" id="toggleIncompleteCheck" class="checkbox" onclick="toggleIncomplete()"><span> Show incompleted missions only</span></label><br></div>
     <div id="asmvHeaderContainer">
       <div class="asmvHeader">Activity Sheets</div>
