--- a/class/students.html
+++ b/class/students.html
@@ -370,7 +370,7 @@
         <td class="keyLabel">missing</td>
       </tr>
     </table>
-    <div class="checkboxes"><label><input type="checkbox" id="toggleIncompleteCheck" class="checkbox" onclick="toggleIncomplete()"><span> Show incompleted missions only</span></label><br></div>
+    <div class="checkboxes"><label><input type="checkbox" id="toggleIncompleteCheck" class="checkbox" onclick="toggleIncomplete()"><span> Show incomplete/missing missions only</span></label><br></div>
     <div id="asmvHeaderContainer">
       <div class="asmvHeader">Activity Sheets</div>
       <div class="asmvHeader">Memory Verses</div>
