--- a/archives.html
+++ b/archives.html
@@ -16,6 +16,28 @@
                     
         <div class="table-flex-div">
 
+            <table class="mission-table" id="w13"> 
+                <tr>
+                    <td colspan="2" class="mission-date">12.05.2021</td>
+                <tr>
+                <tr>
+                    <td class="table-label">LESSON</td>
+                    <td>John 10</td>
+                </tr>
+                <tr>
+                    <td class="table-label">MEMORY</td>
+                    <td>Phil. 2:5-6</td>
+                </tr>
+                <tr>
+                    <td class="download-mission" onclick="window.location='docs/missions/13-jn-10-phil-2-5-6.pdf'"><span class="playButtonSpan">m </span>Missions</td>
+                    <td class="download-mission" onclick="window.location='docs/updates/2021-12-05-update.pdf'"><span class="playButtonSpan">m </span>Update</td>
+                </tr>
+                <tr>
+                    <td class="video" onclick="window.location='https://youtu.be/7ioy4wb_HsM'"><span class="playButtonSpan">D </span>Lesson</td>
+                    <td class="video" onclick="window.location='https://youtu.be/reZGGnFuaoc'"><span class="playButtonSpan">D </span>Memory</td>
+                </tr>
+            </table>
+
             <table class="mission-table" id="w12"> 
                 <tr>
                     <td colspan="2" class="mission-date">11.14.2021</td>
