--- a/class/students.html
+++ b/class/students.html
@@ -488,7 +488,7 @@
   <div class="navigationButtonContainer">
     <div class="backButton" onclick="pop(['rankChartPop'],['studentStatsPop','missionsPop'])"><span>f</span></div>
   </div>
-    <a href="../docs/ranks.pdf" target="_blank"><p>click here to download printable chart</p></a>
+    <a id="rankChartLink" href="../docs/ranks.pdf" target="_blank"><p>click here to download printable chart</p></a>
     <div id = "rankChartContainer">
     <table id="rankChartTable">
       <tr>
