--- a/class/index.html
+++ b/class/index.html
@@ -809,9 +809,9 @@
     <div class="secretButton2" onclick="populateNames2()"></div>
   </div>
   <div class="pointButtonContainer">
-      <div class="roundButton numberButton mvPts" onclick="mvPoints(_mvNum,1)">1</div>
-      <div class="roundButton numberButton mvPts" onclick="mvPoints(_mvNum,2)">2</div>
-      <div class="roundButton numberButton mvPts" onclick="mvPoints(_mvNum,3)">3</div>
+      <div id="mv1Points" class="roundButton numberButton mvPts" onclick="mvPoints(_mvNum,1)">1</div>
+      <div id="mv2Points" class="roundButton numberButton mvPts" onclick="mvPoints(_mvNum,2)">2</div>
+      <div id="mv3Points" class="roundButton numberButton mvPts" onclick="mvPoints(_mvNum,3)">3</div>
       <div id="mv4Points" class="roundButton numberButton mvPts" onclick="mvPoints(_mvNum,4)">4</div>
       <div id="mv5Points" class="roundButton numberButton mvPts" onclick="mvPoints(_mvNum,5)">5</div>
       <div id="mv6Points" class="roundButton numberButton mvPts" onclick="mvPoints(_mvNum,6)">6</div>
