--- a/class/index.html
+++ b/class/index.html
@@ -262,7 +262,7 @@
         <div class="studentPopButtons" id="notesButton" onclick="pop(['studentPop','missionsPop'],['notesPop','notesList']); populateNotes(['studentPop','missionsPop'])">notes</div>
         <div class="studentPopButtons" id="photoButton" onclick="loadStudentPhoto()">photo</div>
         <div class="studentPopButtons" onclick="loadStudentAttStats()">attendance</div>
-        <div class="studentPopButtons" id="emailButton" onclick="populateStudentFields('editEmail1')">email</div>
+        <div class="studentPopButtons" id="emailButton" onclick="populateStudentFields('editEmail')">email</div>
     </div>
 </div>
 
@@ -564,28 +564,56 @@
 </div>
 
 <div id="newStudentPop" class="pop">
-  <input class="textInputField1 focus" id="newFirstAndLast" type="text" placeholder="first/last"/>
-  <div class="genderAndBdayContainer">
-    <input class="textInputField2" id="newGender" type="text" placeholder="M or F"/>
-    <input class="textInputField2" id="newBday" type="text" placeholder="month/day"/>
+  <div>
+    <p>First/Last Name</p>
+    <input class="textInputField1" id="newFirstAndLast" type="text" placeholder="first/last"/>
   </div>
-  <input class="textInputField1" id="newEmail1" type="text" placeholder="primary email"/>
-  <input class="textInputField1" id="newEmail2" type="text" placeholder="secondary email"/>
-  <textarea id="initialNote" rows="10" cols="30" placeholder="note"></textarea>
+  <div class="genderAndBdayContainer">
+    <div>
+      <p>Gender</p>
+      <input class="textInputField2 focus" id="newGender" type="text" placeholder="M or F"/>
+    </div>
+    <div style="width:75px; margin:0px"></div>
+    <div>
+      <p>Birthday</p>
+      <input class="textInputField2" id="newBday" type="text" placeholder="month/day"/>
+    </div>
+  </div>
+  <div>
+    <p>Email Address</p>
+    <input class="textInputField1" id="newEmail" type="text" placeholder="email address"/>
+  </div>
+  <div>
+    <p>Note</p>
+    <textarea id="initialNote" rows="10" cols="30" placeholder="note"></textarea>
+  </div>
   <div class="optionButtonContainer">
     <div class="roundButton cancelButton" onclick="pop(['newStudentPop'],['mainPop']); clearStudentFields()">X</div>
     <div class="roundButton okButton" onclick="newStudent()">V</div>
   </div>
 </div>
 
+
 <div id="editStudentPop" class="pop">
-  <input class="textInputField1" id="editFirstAndLast" type="text" placeholder="first/last"/>
-  <div class="genderAndBdayContainer">
-    <input class="textInputField2 focus" id="editGender" type="text" placeholder="M or F"/>
-    <input class="textInputField2" id="editBday" type="text" placeholder="month/day"/>
+  <div>
+    <p>First/Last Name</p>
+    <input class="textInputField1" id="editFirstAndLast" type="text" placeholder="first/last"/>
   </div>
-  <input class="textInputField1" id="editEmail1" type="text" placeholder="primary email"/>
-  <input class="textInputField1" id="editEmail2" type="text" placeholder="secondary email"/>
+  <div class="genderAndBdayContainer">
+    <div>
+      <p>Gender</p>
+      <input class="textInputField2 focus" id="editGender" type="text" placeholder="M or F"/>
+    </div>
+    <div style="width:75px; margin:0px"></div>
+    <div>
+      <p>Birthday</p>
+      <input class="textInputField2" id="editBday" type="text" placeholder="month/day"/>
+    </div>
+  </div>
+  <div>
+    <p>Email Address</p>
+    <input class="textInputField1" id="editEmail" type="text" placeholder="email address"/>
+  </div>
   <div class="optionButtonContainer">
     <div class="roundButton cancelButton" onclick="pop(['editStudentPop'],['studentPop','missionsPop']); clearStudentFields()">X</div>
     <div class="roundButton deleteButton" id="deleteStudentButton" onclick="actionAlert('Are you sure you want to delete this student?',['editStudentPop'],deleteStudent)">U</div>
