--- a/class/students.html
+++ b/class/students.html
@@ -816,7 +816,7 @@
   </div>
 
 </div> <!--end of master-wrapper-->
-<script src="backup.js"></script>
+<script src="studentsBackup.js"></script>
 <script src="students.js"></script>
 </body>
 </html>
