--- a/archives.html
+++ b/archives.html
@@ -16,6 +16,28 @@
                     
         <div class="table-flex-div">
 
+            <table class="mission-table" id="w14"> 
+                <tr>
+                    <td colspan="2" class="mission-date">12.12.2021</td>
+                <tr>
+                <tr>
+                    <td class="table-label">LESSON</td>
+                    <td>John 11</td>
+                </tr>
+                <tr>
+                    <td class="table-label">MEMORY</td>
+                    <td>Phil. 2:7</td>
+                </tr>
+                <tr>
+                    <td class="download-mission" onclick="window.location='docs/missions/14-jn-11-phil-2-7.pdf'"><span class="playButtonSpan">m </span>Missions</td>
+                    <td class="download-mission" onclick="window.location='docs/updates/2021-12-12-update.pdf'"><span class="playButtonSpan">m </span>Update</td>
+                </tr>
+                <tr>
+                    <td class="video" onclick="window.location='https://youtu.be/nOKJfq_mfyU'"><span class="playButtonSpan">D </span>Lesson</td>
+                    <td class="video" onclick="window.location='https://youtu.be/9pakIeLNS2Q'"><span class="playButtonSpan">D </span>Memory</td>
+                </tr>
+            </table>
+
             <table class="mission-table" id="w13"> 
                 <tr>
                     <td colspan="2" class="mission-date">12.05.2021</td>
