--- a/class/students.html
+++ b/class/students.html
@@ -11,7 +11,7 @@
 <div id="master-wrapper">
 
 <div id="mainPop" class="pop">
-  <p>Please enter your child's last name below (non-case-sensitive) and click search (or press Enter/Return) to view their class progress.</p>
+  <p>Please enter your child's LAST name below (non-case-sensitive) and click search (or press Enter/Return) to view their class progress.</p>
   <div id="searchFieldContainerDiv">
     <input id="searchField" type="text" placeholder="enter child's last name" onkeydown="if(event.keyCode==13)document.getElementById('submitButton').click()"/>
     <div id="submitButton" onclick="findStudent()">S</div>
