--- a/archives.html
+++ b/archives.html
@@ -16,6 +16,28 @@
                     
         <div class="table-flex-div">
 
+            <table class="mission-table" id="w15"> 
+                <tr>
+                    <td colspan="2" class="mission-date">12.19.2021</td>
+                <tr>
+                <tr>
+                    <td class="table-label">LESSON</td>
+                    <td>John 12</td>
+                </tr>
+                <tr>
+                    <td class="table-label">MEMORY</td>
+                    <td>Phil. 2:8</td>
+                </tr>
+                <tr>
+                    <td class="download-mission" onclick="window.location='docs/missions/15-jn-12-phil-2-8.pdf'"><span class="playButtonSpan">m </span>Missions</td>
+                    <td class="download-mission" onclick="window.location='docs/updates/2021-12-19-update.pdf'"><span class="playButtonSpan">m </span>Update</td>
+                </tr>
+                <tr>
+                    <td class="video" onclick="window.location='https://www.youtube.com/watch?v=0n7U6hqKBOI'"><span class="playButtonSpan">D </span>Lesson</td>
+                    <td class="video" onclick="window.location='https://www.youtube.com/watch?v=DGLDa9xsOGs'"><span class="playButtonSpan">D </span>Memory</td>
+                </tr>
+            </table>
+
             <table class="mission-table" id="w14"> 
                 <tr>
                     <td colspan="2" class="mission-date">12.12.2021</td>
