--- a/archives.html
+++ b/archives.html
@@ -29,8 +29,7 @@
                     <td>Phil. 2:8</td>
                 </tr>
                 <tr>
-                    <td class="download-mission" onclick="window.location='docs/missions/15-jn-12-phil-2-8.pdf'"><span class="playButtonSpan">m </span>Missions</td>
-                    <td class="download-mission" onclick="window.location='docs/updates/2021-12-19-update.pdf'"><span class="playButtonSpan">m </span>Update</td>
+                    <td class="download-mission" colspan="2" onclick="window.location='docs/missions/15-jn-12-phil-2-8.pdf'"><span class="playButtonSpan">m </span>Missions</td>
                 </tr>
                 <tr>
                     <td class="video" onclick="window.location='https://www.youtube.com/watch?v=0n7U6hqKBOI'"><span class="playButtonSpan">D </span>Lesson</td>
@@ -51,8 +50,7 @@
                     <td>Phil. 2:7</td>
                 </tr>
                 <tr>
-                    <td class="download-mission" onclick="window.location='docs/missions/14-jn-11-phil-2-7.pdf'"><span class="playButtonSpan">m </span>Missions</td>
-                    <td class="download-mission" onclick="window.location='docs/updates/2021-12-12-update.pdf'"><span class="playButtonSpan">m </span>Update</td>
+                    <td class="download-mission" colspan="2" onclick="window.location='docs/missions/14-jn-11-phil-2-7.pdf'"><span class="playButtonSpan">m </span>Missions</td>
                 </tr>
                 <tr>
                     <td class="video" onclick="window.location='https://youtu.be/nOKJfq_mfyU'"><span class="playButtonSpan">D </span>Lesson</td>
@@ -73,8 +71,7 @@
                     <td>Phil. 2:5-6</td>
                 </tr>
                 <tr>
-                    <td class="download-mission" onclick="window.location='docs/missions/13-jn-10-phil-2-5-6.pdf'"><span class="playButtonSpan">m </span>Missions</td>
-                    <td class="download-mission" onclick="window.location='docs/updates/2021-12-05-update.pdf'"><span class="playButtonSpan">m </span>Update</td>
+                    <td class="download-mission" colspan="2" onclick="window.location='docs/missions/13-jn-10-phil-2-5-6.pdf'"><span class="playButtonSpan">m </span>Missions</td>
                 </tr>
                 <tr>
                     <td class="video" onclick="window.location='https://youtu.be/7ioy4wb_HsM'"><span class="playButtonSpan">D </span>Lesson</td>
@@ -95,8 +92,7 @@
                     <td>Jn. 1:18</td>
                 </tr>
                 <tr>
-                    <td class="download-mission" onclick="window.location='docs/missions/12-jn-1-9-review-jn-1-18.pdf'"><span class="playButtonSpan">m </span>Missions</td>
-                    <td class="download-mission" onclick="window.location='docs/updates/2021-11-14-update.pdf'"><span class="playButtonSpan">m </span>Update</td>
+                    <td class="download-mission" colspan="2" onclick="window.location='docs/missions/12-jn-1-9-review-jn-1-18.pdf'"><span class="playButtonSpan">m </span>Missions</td>
                 </tr>
                 <tr>
                     <td class="no-video">no lesson video</td>
@@ -117,8 +113,7 @@
                     <td>Jn. 1:16-17</td>
                 </tr>
                 <tr>
-                    <td class="download-mission" onclick="window.location='docs/missions/11-jn-9-jn-1-16-17.pdf'"><span class="playButtonSpan">m </span>Missions</td>
-                    <td class="download-mission" onclick="window.location='docs/updates/2021-11-07-update.pdf'"><span class="playButtonSpan">m </span>Update</td>
+                    <td class="download-mission" colspan="2" onclick="window.location='docs/missions/11-jn-9-jn-1-16-17.pdf'"><span class="playButtonSpan">m </span>Missions</td>
                 </tr>
                 <tr>
                     <td class="video" onclick="window.location='https://youtu.be/J7qs7qfulJQ'"><span class="playButtonSpan">D </span>Lesson</td>
@@ -139,8 +134,7 @@
                     <td>Jn. 1:15</td>
                 </tr>
                 <tr>
-                    <td class="download-mission" onclick="window.location='docs/missions/10-jn-8-jn-1-15.pdf'"><span class="playButtonSpan">m </span>Missions</td>
-                    <td class="download-mission" onclick="window.location='docs/updates/2021-10-31-update.pdf'"><span class="playButtonSpan">m </span>Update</td>
+                    <td class="download-mission" colspan="2" onclick="window.location='docs/missions/10-jn-8-jn-1-15.pdf'"><span class="playButtonSpan">m </span>Missions</td>
                 </tr>
                 <tr>
                     <td class="video" onclick="window.location='https://youtu.be/S-XCqvUY458'"><span class="playButtonSpan">D </span>Lesson</td>
@@ -161,8 +155,7 @@
                     <td>Jn. 1:14</td>
                 </tr>
                 <tr>
-                    <td class="download-mission" onclick="window.location='docs/missions/09-jn-7-jn-1-14.pdf'"><span class="playButtonSpan">m </span>Missions</td>
-                    <td class="download-mission" onclick="window.location='docs/updates/2021-10-24-update.pdf'"><span class="playButtonSpan">m </span>Update</td>
+                    <td class="download-mission" colspan="2" onclick="window.location='docs/missions/09-jn-7-jn-1-14.pdf'"><span class="playButtonSpan">m </span>Missions</td>
                 </tr>
                 <tr>
                     <td class="video" onclick="window.location='https://youtu.be/7tHrVXzfuB0'"><span class="playButtonSpan">D </span>Lesson</td>
@@ -183,8 +176,7 @@
                     <td>Jn. 1:12-13</td>
                 </tr>
                 <tr>
-                    <td class="download-mission" onclick="window.location='docs/missions/08-jn-6-jn-1-12-13.pdf'"><span class="playButtonSpan">m </span>Missions</td>
-                    <td class="download-mission" onclick="window.location='docs/updates/2021-10-17-update.pdf'"><span class="playButtonSpan">m </span>Update</td>
+                    <td class="download-mission" colspan="2" onclick="window.location='docs/missions/08-jn-6-jn-1-12-13.pdf'"><span class="playButtonSpan">m </span>Missions</td>
                 </tr>
                 <tr>
                     <td class="video" onclick="window.location='https://youtu.be/wwPvs-kirD8'"><span class="playButtonSpan">D </span>Lesson</td>
@@ -205,8 +197,7 @@
                     <td>Jn. 1:9-11</td>
                 </tr>
                 <tr>
-                    <td class="download-mission" onclick="window.location='docs/missions/07-jn-5-jn-1-9-11.pdf'"><span class="playButtonSpan">m </span>Missions</td>
-                    <td class="download-mission" onclick="window.location='docs/updates/2021-10-10-update.pdf'"><span class="playButtonSpan">m </span>Update</td>
+                    <td class="download-mission" colspan="2" onclick="window.location='docs/missions/07-jn-5-jn-1-9-11.pdf'"><span class="playButtonSpan">m </span>Missions</td>
                 </tr>
                 <tr>
                     <td class="video" onclick="window.location='https://youtu.be/LbRGI7ooREs'"><span class="playButtonSpan">D </span>Lesson</td>
@@ -227,8 +218,7 @@
                     <td>Jn. 1:6-8</td>
                 </tr>
                 <tr>
-                    <td class="download-mission" onclick="window.location='docs/missions/06-jn-4-jn-1-6-8.pdf'"><span class="playButtonSpan">m </span>Missions</td>
-                    <td class="download-mission" onclick="window.location='docs/updates/2021-10-03-update.pdf'"><span class="playButtonSpan">m </span>Update</td>
+                    <td class="download-mission" colspan="2" onclick="window.location='docs/missions/06-jn-4-jn-1-6-8.pdf'"><span class="playButtonSpan">m </span>Missions</td>
                 </tr>
                 <tr>
                     <td class="video" onclick="window.location='https://youtu.be/Q2n4_VjO4fE'"><span class="playButtonSpan">D </span>Lesson</td>
@@ -249,8 +239,7 @@
                     <td>Jn. 1:4-5</td>
                 </tr>
                 <tr>
-                    <td class="download-mission" onclick="window.location='docs/missions/05-jn-3-jn-1-4-5.pdf'"><span class="playButtonSpan">m </span>Missions</td>
-                    <td class="download-mission" onclick="window.location='docs/updates/2021-09-26-update.pdf'"><span class="playButtonSpan">m </span>Update</td>
+                    <td class="download-mission" colspan="2" onclick="window.location='docs/missions/05-jn-3-jn-1-4-5.pdf'"><span class="playButtonSpan">m </span>Missions</td>
                 </tr>
                 <tr>
                     <td class="video" onclick="window.location='https://youtu.be/KRXjGR-b73k'"><span class="playButtonSpan">D </span>Lesson</td>
@@ -271,8 +260,7 @@
                     <td>Jn. 1:3</td>
                 </tr>
                 <tr>
-                    <td class="download-mission" onclick="window.location='docs/missions/04-jn-2-jn-1-3.pdf'"><span class="playButtonSpan">m </span>Missions</td>
-                    <td class="download-mission" onclick="window.location='docs/updates/2021-09-19-update.pdf'"><span class="playButtonSpan">m </span>Update</td>
+                    <td class="download-mission" colspan="2" onclick="window.location='docs/missions/04-jn-2-jn-1-3.pdf'"><span class="playButtonSpan">m </span>Missions</td>
                 </tr>
                 <tr>
                     <td class="video" onclick="window.location='https://youtu.be/dgQd-nDYEkE'"><span class="playButtonSpan">D </span>Lesson</td>
@@ -293,8 +281,7 @@
                     <td>Jn. 1:1-2</td>
                 </tr>
                 <tr>
-                    <td class="download-mission" onclick="window.location='docs/missions/03-jn-1-jn-1-1-2.pdf'"><span class="playButtonSpan">m </span>Missions</td>
-                    <td class="download-mission" onclick="window.location='docs/updates/2021-09-12-update.pdf'"><span class="playButtonSpan">m </span>Update</td>
+                    <td class="download-mission" colspan="2" onclick="window.location='docs/missions/03-jn-1-jn-1-1-2.pdf'"><span class="playButtonSpan">m </span>Missions</td>
                 </tr>
                 <tr>
                     <td class="video" onclick="window.location='https://youtu.be/9xGjPzEF_tE'"><span class="playButtonSpan">D </span>Lesson</td>
@@ -315,8 +302,7 @@
                     <td>Jn. 20:30-31</td>
                 </tr>
                 <tr>
-                    <td class="download-mission" onclick="window.location='docs/missions/02-jn-intro-jn-20-30-31.pdf'"><span class="playButtonSpan">m </span>Missions</td>
-                    <td class="download-mission" onclick="window.location='docs/updates/2021-08-29-update.pdf'"><span class="playButtonSpan">m </span>Update</td>
+                    <td class="download-mission" colspan="2" onclick="window.location='docs/missions/02-jn-intro-jn-20-30-31.pdf'"><span class="playButtonSpan">m </span>Missions</td>
                 </tr>
                 <tr>
                     <td class="no-video">no lesson video</td>
@@ -337,8 +323,7 @@
                     <td>Ps. 139:17-18</td>
                 </tr>
                 <tr>
-                    <td class="download-mission" onclick="window.location='docs/missions/01-class-intro-ps-139-17-18.pdf'"><span class="playButtonSpan">m </span>Missions</td>
-                    <td class="download-mission" onclick="window.location='docs/updates/2021-08-22-update.pdf'"><span class="playButtonSpan">m </span>Update</td>
+                    <td class="download-mission" colspan="2" onclick="window.location='docs/missions/01-class-intro-ps-139-17-18.pdf'"><span class="playButtonSpan">m </span>Missions</td>
                 </tr>
                 <tr>
                     <td class="no-video">no lesson video</td>
