--- a/archives.html
+++ b/archives.html
@@ -16,6 +16,27 @@
                     
         <div class="table-flex-div">
 
+            <table class="mission-table" id="w16"> 
+                <tr>
+                    <td colspan="2" class="mission-date">01.09.2022</td>
+                <tr>
+                <tr>
+                    <td class="table-label">LESSON</td>
+                    <td>John 13</td>
+                </tr>
+                <tr>
+                    <td class="table-label">MEMORY</td>
+                    <td>Phil. 2:9</td>
+                </tr>
+                <tr>
+                    <td class="download-mission" colspan="2" onclick="window.location='docs/missions/16-jn-13-phil-2-9.pdf'"><span class="playButtonSpan">m </span>Missions</td>
+                </tr>
+                <tr>
+                    <td class="video" onclick="window.location='https://youtu.be/05MiB65Lwhc'"><span class="playButtonSpan">D </span>Lesson</td>
+                    <td class="video" onclick="window.location='https://youtu.be/SxmEnydSkxM'"><span class="playButtonSpan">D </span>Memory</td>
+                </tr>
+            </table>
+
             <table class="mission-table" id="w15"> 
                 <tr>
                     <td colspan="2" class="mission-date">12.19.2021</td>
