--- a/class/index.html
+++ b/class/index.html
@@ -753,7 +753,7 @@
         <div id="as19Pop" class="asButton w19" onclick="asPop(19)">John 18</div>
         <div id="as18Pop" class="asButton w18" onclick="asPop(18)">John 17</div>
         <div id="as17Pop" class="asButton w17" onclick="asPop(17)">John 16</div>
-        <div id="as16Pop" class="asButton w16" onclick="asPop(16,6)">John 14-15</div>
+        <div id="as16Pop" class="asButton2 w16" onclick="asPop(16,6)">John <br>14-15</div>
         <div id="as15Pop" class="asButton w15" onclick="asPop(15)">John 13</div>
         <div id="as14Pop" class="asButton w14" onclick="asPop(14)">John 12</div>
         <div id="as13Pop" class="asButton w13" onclick="asPop(13)">John 11</div>
