--- a/archives.html
+++ b/archives.html
@@ -16,6 +16,27 @@
                     
         <div class="table-flex-div">
 
+            <table class="mission-table" id="w18"> 
+                <tr>
+                    <td colspan="2" class="mission-date">01.30.2022</td>
+                <tr>
+                <tr>
+                    <td class="table-label">LESSON</td>
+                    <td>John 16</td>
+                </tr>
+                <tr>
+                    <td class="table-label">MEMORY</td>
+                    <td>Rom. 8:31-32</td>
+                </tr>
+                <tr>
+                    <td class="download-mission" colspan="2" onclick="window.location='docs/missions/18-jn-16-rom-8-31-32.pdf'"><span class="playButtonSpan">m </span>Missions</td>
+                </tr>
+                <tr>
+                    <td class="video" onclick="window.location='https://youtu.be/5BLjTALqqMw'"><span class="playButtonSpan">D </span>Lesson</td>
+                    <td class="video" onclick="window.location='https://youtu.be/yjrdNKNvGvc'"><span class="playButtonSpan">D </span>Memory</td>
+                </tr>
+            </table>
+
             <table class="mission-table" id="w17"> 
                 <tr>
                     <td colspan="2" class="mission-date">01.23.2022</td>
