--- a/class/students.html
+++ b/class/students.html
@@ -392,7 +392,7 @@
         <div id="as19Pop" class="asButton w19" onclick="asPop(19)">Jn 18</div>
         <div id="as18Pop" class="asButton w18" onclick="asPop(18)">Jn 17</div>
         <div id="as17Pop" class="asButton w17" onclick="asPop(17)">Jn 16</div>
-        <div id="as16Pop" class="asButton w16" onclick="asPop(16)">Jn 14-15</div>
+        <div id="as16Pop" class="asButton w16" onclick="asPop(16,6)">Jn 14-15</div>
         <div id="as15Pop" class="asButton w15" onclick="asPop(15)">Jn 13</div>
         <div id="as14Pop" class="asButton w14" onclick="asPop(14)">Jn 12</div>
         <div id="as13Pop" class="asButton w13" onclick="asPop(13)">Jn 11</div>
@@ -478,6 +478,7 @@
       <div id="mv4Points" class="roundButton numberButton mvPts">4</div>
       <div id="mv5Points" class="roundButton numberButton mvPts">5</div>
       <div id="mv6Points" class="roundButton numberButton mvPts">6</div>
+      <div id="mv7Points" class="roundButton numberButton mvPts">7</div>
   </div>
   <p id="mvText" onclick="mvLinks()"></p>
 </div>
