--- a/archives.html
+++ b/archives.html
@@ -13,8 +13,29 @@
                 <header class="non-index-header" title="Go to Homepage">Archives</header>
             </a>
         </div>
-                    
+        
         <div class="table-flex-div">
+
+            <table class="mission-table" id="w19"> 
+                <tr>
+                    <td colspan="2" class="mission-date">02.06.2022</td>
+                <tr>
+                <tr>
+                    <td class="table-label">LESSON</td>
+                    <td>John 17</td>
+                </tr>
+                <tr>
+                    <td class="table-label">MEMORY</td>
+                    <td>Rom. 8:33</td>
+                </tr>
+                <tr>
+                    <td class="download-mission" colspan="2" onclick="window.location='docs/missions/19-jn-17-rom-8-33.pdf'"><span class="playButtonSpan">m </span>Missions</td>
+                </tr>
+                <tr>
+                    <td class="video" onclick="window.location='https://youtu.be/dkVbG9K0_Yg'"><span class="playButtonSpan">D </span>Lesson</td>
+                    <td class="video" onclick="window.location='https://youtu.be/p6l52pBP4cU'"><span class="playButtonSpan">D </span>Memory</td>
+                </tr>
+            </table>
 
             <table class="mission-table" id="w18"> 
                 <tr>
