--- a/class/index.html
+++ b/class/index.html
@@ -575,7 +575,7 @@
 <div id="newStudentPop" class="pop">
   <div>
     <p>First/Last Name</p>
-    <input class="textInputField1" id="newFirstAndLast" type="text" placeholder="first/last"/>
+    <input class="textInputField1" id="newFirstAndLast" type="text" placeholder="first last"/>
   </div>
   <div class="genderAndBdayContainer">
     <div>
@@ -606,7 +606,7 @@
 <div id="editStudentPop" class="pop">
   <div>
     <p>First/Last Name</p>
-    <input class="textInputField1" id="editFirstAndLast" type="text" placeholder="first/last"/>
+    <input class="textInputField1" id="editFirstAndLast" type="text" placeholder="first last"/>
   </div>
   <div class="genderAndBdayContainer">
     <div>
