--- a/archives.html
+++ b/archives.html
@@ -16,6 +16,27 @@
         
         <div class="table-flex-div">
 
+            <table class="mission-table" id="w20"> 
+                <tr>
+                    <td colspan="2" class="mission-date">02.13.2022</td>
+                <tr>
+                <tr>
+                    <td class="table-label">LESSON</td>
+                    <td>John 18</td>
+                </tr>
+                <tr>
+                    <td class="table-label">MEMORY</td>
+                    <td>Rom. 8:34</td>
+                </tr>
+                <tr>
+                    <td class="download-mission" colspan="2" onclick="window.location='docs/missions/20-jn-18-rom-8-34.pdf'"><span class="playButtonSpan">m </span>Missions</td>
+                </tr>
+                <tr>
+                    <td class="video" onclick="window.location='https://youtu.be/PS5MvQ6oXdw'"><span class="playButtonSpan">D </span>Lesson</td>
+                    <td class="video" onclick="window.location='https://youtu.be/NKBLpFpdypg'"><span class="playButtonSpan">D </span>Memory</td>
+                </tr>
+            </table>
+
             <table class="mission-table" id="w19"> 
                 <tr>
                     <td colspan="2" class="mission-date">02.06.2022</td>
