--- a/class/students.html
+++ b/class/students.html
@@ -58,7 +58,8 @@
 
 <div id="studentStatsPop" class="pop">
   <div class="navigationButtonContainer">
-    <div class="backButton" onclick="pop(['studentStatsPop','missionsPop','asPointsPop','mvPointsPop'],['mainPop'])"><span>f</span></div>
+    <div class="homeButton" onclick="goHome()"><span>5</span></div>
+    <!-- <div class="backButton" onclick="pop(['studentStatsPop','missionsPop','asPointsPop','mvPointsPop'],['mainPop'])"><span>f</span></div> -->
     <a href="tel:8645694879"><div class="contactButton2">x</div></a>
     <a href="sms:8645694879"><div class="contactButton2">d</div></a>
     <a href="mailto:jonathan@ksgrade2.com"><div class="contactButton2">v</div></a>
