--- a/archives.html
+++ b/archives.html
@@ -16,6 +16,27 @@
         
         <div class="table-flex-div">
 
+            <table class="mission-table" id="w23"> 
+                <tr>
+                    <td colspan="2" class="mission-date">03.06.2022</td>
+                <tr>
+                <tr>
+                    <td class="table-label">LESSON</td>
+                    <td>John 21</td>
+                </tr>
+                <tr>
+                    <td class="table-label">MEMORY</td>
+                    <td>Rom. 8:37</td>
+                </tr>
+                <tr>
+                    <td class="download-mission" colspan="2" onclick="window.location='docs/missions/23-jn-21-rom-8-37.pdf'"><span class="playButtonSpan">m </span>Missions</td>
+                </tr>
+                <tr>
+                    <td class="video" onclick="window.location='https://youtu.be/16iR2z2dSRI'"><span class="playButtonSpan">D </span>Lesson</td>
+                    <td class="video" onclick="window.location='https://youtu.be/ZQuOXUpo60g'"><span class="playButtonSpan">D </span>Memory</td>
+                </tr>
+            </table>
+
             <table class="mission-table" id="w22"> 
                 <tr>
                     <td colspan="2" class="mission-date">02.27.2022</td>
