--- a/archives.html
+++ b/archives.html
@@ -18,6 +18,27 @@
 
             <table class="mission-table" id="w23"> 
                 <tr>
+                    <td colspan="2" class="mission-date">03.13.2022</td>
+                <tr>
+                <tr>
+                    <td class="table-label">LESSON</td>
+                    <td>John 10-21 Review</td>
+                </tr>
+                <tr>
+                    <td class="table-label">MEMORY</td>
+                    <td>Rom. 8:38-39</td>
+                </tr>
+                <tr>
+                    <td class="download-mission" colspan="2" onclick="window.location='docs/missions/24-jn-10-21-review-rom-8-38-39.pdf'"><span class="playButtonSpan">m </span>Missions</td>
+                </tr>
+                <tr>
+                    <td class="no-video">no lesson video</td>
+                    <td class="video" onclick="window.location='https://youtu.be/_hTaRUw946Q'"><span class="playButtonSpan">D </span>Memory</td>
+                </tr>
+            </table>
+
+            <table class="mission-table" id="w23"> 
+                <tr>
                     <td colspan="2" class="mission-date">03.06.2022</td>
                 <tr>
                 <tr>
