--- a/archives.html
+++ b/archives.html
@@ -16,7 +16,28 @@
         
         <div class="table-flex-div">
 
-            <table class="mission-table" id="w23"> 
+            <table class="mission-table" id="w25"> 
+                <tr>
+                    <td colspan="2" class="mission-date">03.20.2022</td>
+                <tr>
+                <tr>
+                    <td class="table-label">LESSON</td>
+                    <td>Armor Intro</td>
+                </tr>
+                <tr>
+                    <td class="table-label">MEMORY</td>
+                    <td>Eph. 6:10-11</td>
+                </tr>
+                <tr>
+                    <td class="download-mission" colspan="2" onclick="window.location='docs/missions/25-armor-intro-eph-6-10-11.pdf'"><span class="playButtonSpan">m </span>Missions</td>
+                </tr>
+                <tr>
+                    <td class="no-video">no lesson video</td>
+                    <td class="video" onclick="window.location='https://youtu.be/3937MxTS8zg'"><span class="playButtonSpan">D </span>Memory</td>
+                </tr>
+            </table>
+
+            <table class="mission-table" id="w24"> 
                 <tr>
                     <td colspan="2" class="mission-date">03.13.2022</td>
                 <tr>
