--- a/archives.html
+++ b/archives.html
@@ -16,6 +16,27 @@
         
         <div class="table-flex-div">
 
+            <table class="mission-table" id="w27"> 
+                <tr>
+                    <td colspan="2" class="mission-date">04.03.2022</td>
+                <tr>
+                <tr>
+                    <td class="table-label">LESSON</td>
+                    <td>Breastplate</td>
+                </tr>
+                <tr>
+                    <td class="table-label">MEMORY</td>
+                    <td>Eph. 6:13</td>
+                </tr>
+                <tr>
+                    <td class="download-mission" colspan="2" onclick="window.location='docs/missions/27-breastplate-eph-6-13.pdf'"><span class="playButtonSpan">m </span>Missions</td>
+                </tr>
+                <tr>
+                    <td class="no-video">no lesson video</td>
+                    <td class="video" onclick="window.location='https://youtu.be/t1n2urtTGN4'"><span class="playButtonSpan">D </span>Memory</td>
+                </tr>
+            </table>
+
             <table class="mission-table" id="w26"> 
                 <tr>
                     <td colspan="2" class="mission-date">03.27.2022</td>
