--- a/class/students.html
+++ b/class/students.html
@@ -383,7 +383,7 @@
         <div id="as29Pop" class="asButton w29" onclick="asPop(29)">Helmet</div>
         <div id="as28Pop" class="asButton w28" onclick="asPop(28)">Shield</div>
         <div id="as27Pop" class="asButton w27" onclick="asPop(27)">Shoes</div>
-        <div id="as26Pop" class="asButton w26" onclick="asPop(26)">Breassplate</div>
+        <div id="as26Pop" class="asButton w26" onclick="asPop(26)">Breastplate</div>
         <div id="as25Pop" class="asButton w25" onclick="asPop(25)">Belt</div>
         <div id="as24Pop" class="asButton w24" onclick="asPop(24)">Armor Intro</div>
         <div id="as23Pop" class="asButton w23" onclick="asPop(23,6)">Jn 10-21 Review</div>
