--- a/archives.html
+++ b/archives.html
@@ -16,6 +16,27 @@
         
         <div class="table-flex-div">
 
+            <table class="mission-table" id="w29"> 
+                <tr>
+                    <td colspan="2" class="mission-date">04.24.2022</td>
+                <tr>
+                <tr>
+                    <td class="table-label">LESSON</td>
+                    <td>Shield</td>
+                </tr>
+                <tr>
+                    <td class="table-label">MEMORY</td>
+                    <td>Eph. 6:16</td>
+                </tr>
+                <tr>
+                    <td class="download-mission" colspan="2" onclick="window.location='docs/missions/29-shield-eph-6-16.pdf'"><span class="playButtonSpan">m </span>Missions</td>
+                </tr>
+                <tr>
+                    <td class="no-video">no lesson video</td>
+                    <td class="video" onclick="window.location='https://youtu.be/MW9OBKi7fCk'"><span class="playButtonSpan">D </span>Memory</td>
+                </tr>
+            </table>
+
             <table class="mission-table" id="w28"> 
                 <tr>
                     <td colspan="2" class="mission-date">04.10.2022</td>
