--- a/archives.html
+++ b/archives.html
@@ -16,6 +16,27 @@
         
         <div class="table-flex-div">
 
+            <table class="mission-table" id="w30"> 
+                <tr>
+                    <td colspan="2" class="mission-date">05.01.2022</td>
+                <tr>
+                <tr>
+                    <td class="table-label">LESSON</td>
+                    <td>Helmet</td>
+                </tr>
+                <tr>
+                    <td class="table-label">MEMORY</td>
+                    <td>Eph. 6:17</td>
+                </tr>
+                <tr>
+                    <td class="download-mission" colspan="2" onclick="window.location='docs/missions/30-helmet-eph-6-17.pdf'"><span class="playButtonSpan">m </span>Missions</td>
+                </tr>
+                <tr>
+                    <td class="video" onclick="window.location='https://vimeo.com/547226479'"><span class="playButtonSpan">D </span>Lesson</td>
+                    <td class="video" onclick="window.location='https://youtu.be/Y7bSiP9unAM'"><span class="playButtonSpan">D </span>Memory</td>
+                </tr>
+            </table>
+
             <table class="mission-table" id="w29"> 
                 <tr>
                     <td colspan="2" class="mission-date">04.24.2022</td>
