--- a/archives.html
+++ b/archives.html
@@ -16,6 +16,27 @@
         
         <div class="table-flex-div">
 
+            <table class="mission-table" id="w31"> 
+                <tr>
+                    <td colspan="2" class="mission-date">05.08.2022</td>
+                <tr>
+                <tr>
+                    <td class="table-label">LESSON</td>
+                    <td>Sword</td>
+                </tr>
+                <tr>
+                    <td class="table-label">MEMORY</td>
+                    <td>Eph. 6:18</td>
+                </tr>
+                <tr>
+                    <td class="download-mission" colspan="2" onclick="window.location='docs/missions/31-sword-eph-6-18.pdf'"><span class="playButtonSpan">m </span>Missions</td>
+                </tr>
+                <tr>
+                    <td class="video" onclick="window.location='https://vimeo.com/550032546'"><span class="playButtonSpan">D </span>Lesson</td>
+                    <td class="video" onclick="window.location='https://youtu.be/49jZyNOx4eU'"><span class="playButtonSpan">D </span>Memory</td>
+                </tr>
+            </table>
+
             <table class="mission-table" id="w30"> 
                 <tr>
                     <td colspan="2" class="mission-date">05.01.2022</td>
