--- a/class/students.html
+++ b/class/students.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" type="text/css" href="students.css"/>
     <link rel=”shortcut icon” href =../“favicon.ico”>
-    <title>class</title>
+    <title>Student Progress</title>
 </head>
 <body>
 <div id="master-wrapper">
