--- a/class/index.html
+++ b/class/index.html
@@ -259,7 +259,7 @@
 <div id="studentPop" class="pop">
     <div class="navigationButtonContainer">
       <div class="backButton" onclick="goHome()"><span>f</span></div>
-      <div class="secretButton" onclick="dataInputAlert('Set points to:',['studentPop','missionsPop'],true,setPoints)"></div>
+      <div class="secretButton" onclick="pop(['studentPop','missionsPop'],['dataPop']); loadStudentData()"></div> <!-- onclick="dataInputAlert('Set points to:',['studentPop','missionsPop'],true,setPoints)" -->
       <div class="homeButton" onclick="goHome()"><span>5</span></div>
     </div>
     <span id="dispRankName"></span> <span id="dispPts"></span><br>
@@ -925,6 +925,19 @@
   <div id="bdayListAbsent"></div>
 </div>
 
+<div id="dataPop" class="pop">
+  <div class="navigationButtonContainer">
+    <div class="backButton" onclick="pop(['dataPop'],['studentPop','missionsPop'])"><span>f</span></div>
+    <div class="homeButton" onclick="goHome()"><span>5</span></div>
+  </div>
+  <div id="studentData">
+    <p id="dateAdded"></p>
+    <p id="firstName"></p>
+    <p id="lastName"></p>
+    <p id="fullName"></p>
+  </div>
+</div>
+
 <div id="backupPop" class="pop">
   <div class="navigationButtonContainer">
     <div class="backButton" onclick="pop(['backupPop'],['mainMenuPop'])"><span>f</span></div>
@@ -932,7 +945,6 @@
   </div>
   <div id="backupArrays" class ="select" onclick="selectText('backupArrays')">
     <div id="slBackupArray"></div>
-    <div id="checkedStateBackupArray"></div>
     <div id="amAttBackupArray"></div>
     <div id="pmAttBackupArray"></div>
     <div id="teacherNotesBackupArray"></div>
